# tic-tac-toe

./: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
qml/: Cell.qml  GameMenu.qml  GameWindow.qml  main.qml
